# legalease-ai

./: .dockerignore  .env.example  .firebaserc  .gitignore  .mise.toml  CLAUDE.md  DOCKER_UV_MIGRATION.md  DOCUMENT_VIEWER_IMPLEMENTATION.md  FRONTEND_STATUS.md  HYBRID_SEARCH_FIX.md  IMPROVEMENTS.md  LAUNCH_CHECKLIST.md  LAUNCH_DECISION.md  Makefile  QUICKSTART.md  README.md  RESET.md  UUID_MIGRATION_GUIDE.md  apphosting.yaml  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  mise.toml  package.json  pnpm-lock.yaml  reindex_transcripts.py  storage.rules
backend/: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  CASE_API_DOCUMENTATION.md  CELERY_QUICKSTART.md  CHUNKING_ARCHITECTURE.txt  CHUNKING_IMPLEMENTATION_SUMMARY.md  CHUNKING_QUICK_START.md  DATABASE.md  DEPLOYMENT.md  DOCLING_INTEGRATION.md  DOCLING_QUICKSTART.md  DOCLING_SUMMARY.md  DOCUMENT_API.md  EMBEDDING_PIPELINE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LEGAL_CHUNKING.md  MINIO_USAGE.md  QDRANT_IMPLEMENTATION_SUMMARY.md  QDRANT_INTEGRATION.md  QUICKSTART.md  QUICKSTART_PERSISTENCE.md  QUICK_START.md  README_INTEGRATION.md  ROCM_SETUP.md  SEARCH_SCORE_FIX.md  SETUP_SUMMARY.md  SUBTITLE_GENERATOR_GUIDE.md  SUBTITLE_QUICK_START.md  TRANSCRIPTION_API_DOCUMENTATION.md  TRANSCRIPTION_QUICK_START.md  WHISPERX_QUICKSTART.md  WHISPERX_SETUP.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  (+23 more)
backend/alembic/: env.py
backend/alembic/versions/: 001_add_research_and_knowledge_tables.py  2407377fe923_merge_waveform_and_forensic_branches.py  5c3bf9d9f8a2_add_auth_tables.py  96b2dafae4c0_add_username_column_to_users_table.py  a1b2c3d4e5f6_add_transcript_summary_fields.py  a7280fc3181b_simplify_case_status_enum.py  b156ff2242c8_add_transcript_highlights.py  c2d3e4f5g6h7_add_waveform_data_column.py  ec667c5bb003_initial_schema.py  f7g8h9i0j1k2_add_transcript_segment_key_moments.py  h9i0j1k2l3m4_decouple_transcripts_from_documents.py  y64ulr87fwpa_add_forensic_exports_table.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  (+10 more)
backend/app/application/: README.md
backend/app/core/: __init__.py  config.py  database.py  identifiers.py  logging.py  minio.py  minio_client.py  neo4j.py  ollama.py  qdrant.py  security.py
backend/app/domain/: QUICK_REFERENCE.md  README.md  __init__.py
backend/app/infrastructure/: exceptions.py
backend/app/models/: __init__.py  base.py  case.py  chunk.py  document.py  entity.py  forensic_export.py  processing_job.py  transcription.py  user.py
backend/app/schemas/: __init__.py  case.py  document.py  forensic_export.py  search.py  transcription.py  user.py
backend/app/services/: __init__.py  case_service.py  device_manager.py  document_service.py  entity_service.py  forensic_export_service.py  graph_service.py  indexing_service.py  model_manager.py  model_selector.py  ollama_semaphore.py  page_image_service.py  search_service.py  storage_service.py  summarization_service.py  tagging_service.py  transcript_indexing_service.py  transcript_summarization.py  transcription_service.py
backend/app/shared/: EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  __init__.py
backend/app/workers/: IMPLEMENTATION_FILES.md  PIPELINE_GUIDE.md  README.md  __init__.py  celery_app.py
backend/scripts/: create_dummy_chunks.py  init_infrastructure.py  init_qdrant_collections.py  opensearch_demo.py  process_seeded_documents.py  run_migrations.sh  seed_data.py  seed_with_real_pdfs.py  setup_dependencies.sh  test_docling_bbox.py  test_docling_bbox_simple.py  test_refactored_docling_parser.py  test_speaker_identification.py
backend/seed/: __init__.py  seed.py
backend/test_subtitles/: courtroom_all_formats.json  courtroom_all_formats.srt  courtroom_all_formats.vtt  factory_test.json  factory_test.srt  factory_test.vtt  no_speaker.srt
backend/tests/: test_team_sync.py
(+551 files in other folders)
