[project]
name = "legalease-backend"
version = "0.1.0"
description = "LegalEase Backend API - Legal document search and transcription"
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic",
    "asyncpg",
    "celery",
    "docxtpl",
    "fastapi",
    "gliner",
    "httpx",
    "minio",
    "neo4j",
    "numpy",
    "pdf2image",
    "pillow",
    "psycopg2-binary",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymupdf",
    "pypdf",
    "pytesseract",
    "python-docx",
    "python-multipart",
    "qdrant-client",
    "redis",
    "sentence-transformers",
    "spacy",
    "sqlalchemy>=2.0",
    "tiktoken",
    "torch",
    "transformers",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
