[project]
name = "legalease-backend"
version = "0.1.0"
description = "LegalEase Backend API - Legal document search and transcription"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate>=0.27.0",
    "alembic",
    "asyncpg",
    "celery",
    "docling",
    "docxtpl",
    "easyocr",
    "fastapi",
    "fastembed>=0.6.1",
    "gliner",
    "httpx",
    "llama-index-core",
    "llama-index-embeddings-fastembed",
    "llama-index-readers-docling",
    "llama-index-vector-stores-qdrant",
    "minio",
    "neo4j",
    "numpy",
    "pdf2image",
    "pillow",
    "psycopg2-binary",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pymupdf",
    "pypdf",
    "pytesseract",
    "python-docx",
    "python-multipart",
    "qdrant-client>=1.14.0",
    "redis",
    "reportlab>=4.4.4",
    "sentence-transformers",
    "spacy",
    "sqlalchemy>=2.0",
    "tiktoken",
    "transformers",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]
worker = [
    "pyannote.audio",
    "whisperx @ git+https://github.com/m-bain/whisperx.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
